// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design.vue Load report button enabled if reports exist 1`] = `
<section>
  <div
    class="columns is-vcentered v-min-4-5r"
  >
    <div
      class="column"
    >
      <div
        class="is-grouped is-pulled-left"
      >
        <div
          class="has-text-weight-bold is-italic"
        >
          <span>
            Untitled Report
          </span>
        </div>

        <!---->
      </div>
    </div>

    <div
      class="column"
    >
      <div
        class="field is-grouped is-pulled-right"
      >
        <!---->

        <div
          class="control field"
          data-test-id="dropdown-save-report"
        >
          <p
            class="control"
          >
            <!---->
          </p>

          <p
            class="control"
          >
            <div
              class="dropdown is-right"
            >
              <div
                class="dropdown-trigger"
              >
                <button
                  aria-controls="dropdown-save-report"
                  aria-haspopup="true"
                  class="button"
                  disabled="disabled"
                >
                  <span
                    class=""
                  >
                    Save Report
                  </span>

                  <span
                    class="icon is-small"
                  >
                    <font-awesome-icon-stub
                      icon="caret-down"
                    />
                  </span>
                </button>
              </div>

              <div
                class="dropdown-menu"
                id="dropdown-save-report"
                role="menu"
              >
                <div
                  class="dropdown-content"
                >
                  <div
                    class="dropdown-item"
                  >
                    <div
                      class="field"
                    >
                      <!---->

                      <div
                        class="control"
                      >
                        <input
                          class="input"
                          placeholder="Name your report"
                          type="text"
                        />
                      </div>
                    </div>

                    <div
                      class="buttons is-right"
                    >
                      <button
                        class="button is-text"
                        data-dropdown-auto-close=""
                      >

                      Cancel

                      </button>

                      <button
                        class="button"
                        data-dropdown-auto-close=""
                        data-test-id="button-save-report"
                        disabled="disabled"
                      >

                      Save

                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </p>
        </div>

        <p
          class="control"
        >
          <div
            class="dropdown is-right"
          >
            <div
              class="dropdown-trigger"
            >
              <button
                aria-controls="dropdown-reports"
                aria-haspopup="true"
                class="button"
              >
                <span
                  class=""
                >
                  Reports
                </span>

                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="caret-down"
                  />
                </span>
              </button>
            </div>

            <div
              class="dropdown-menu"
              id="dropdown-reports"
              role="menu"
            >
              <div
                class="dropdown-content"
              >
                <a
                  class="dropdown-item is-active"
                  data-dropdown-auto-close=""
                >



                </a>
              </div>
            </div>
          </div>
        </p>

        <!---->
      </div>
    </div>
  </div>

  <div
    class="columns"
  >
    <aside
      class="column is-one-quarter"
    >
      <div
        class="box"
      >
        <div
          class="level"
        >
          <div
            class="level-left"
          >
            <h2
              class="title is-5"
            >
              Query
            </h2>
          </div>

          <div
            class="level-right"
          >
            <div
              class="level-item field is-grouped"
            >
              <div
                class="control"
              >
                <div
                  class="dropdown tooltip"
                  data-tooltip="Show generated SQL query"
                >
                  <div
                    class="dropdown-trigger"
                  >
                    <button
                      aria-controls="dropdown-sql"
                      aria-haspopup="true"
                      class="button button is-text is-small"
                      disabled="disabled"
                    >
                      <span
                        class=""
                      >
                        SQL
                      </span>

                      <span
                        class="icon is-small"
                      >
                        <font-awesome-icon-stub
                          icon="caret-down"
                        />
                      </span>
                    </button>
                  </div>

                  <div
                    class="dropdown-menu"
                    id="dropdown-sql"
                    role="menu"
                  >
                    <div
                      class="dropdown-content"
                    >
                      <div
                        class="level"
                      >
                        <div
                          class="level-item"
                        >
                          <textarea
                            class="has-text-grey-dark is-size-7 is-family-code is-borderless"
                            readonly="readonly"
                            rows="20"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>

              <div
                class="control"
              >
                <div
                  class="field has-addons"
                >
                  <div
                    class="control"
                  >
                    <button
                      class="button is-success"
                      data-test-id="run-query-button"
                      disabled="disabled"
                    >

                      Run

                    </button>
                  </div>

                  <div
                    class="control"
                  >
                    <button
                      class="button tooltip is-active has-text-interactive-primary"
                      data-tooltip="Toggle autorun queries off"
                      disabled="disabled"
                    >
                      <span
                        class="icon is-small is-size-7"
                      >
                        <font-awesome-icon-stub
                          icon="sync"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>

        <progress
          class="progress is-small is-info"
        />
      </div>
    </aside>

    <div
      class="column is-three-quarters"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <h2
              class="title is-5"
            >
              <span>
                Results
              </span>

              <!---->
            </h2>
          </div>

          <div
            class="column"
          >
            <div
              class="buttons has-addons is-right"
            >
              <button
                class="button tooltip is-active has-text-interactive-secondary"
                data-tooltip="Bar chart"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Line chart"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Area chart"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Scatter chart"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>

        <div>
          <!---->

          <div>
            <div
              class="box is-radiusless is-shadowless has-text-centered"
            >
              <p>

                Run a query with at least one aggregate selected or load a
                report

              </p>
            </div>
          </div>
        </div>

        <hr />

        <div>
          <!---->

          <div
            class="result-data"
          >
            <div
              class="notification is-italic"
            >

    No results

            </div>
          </div>
        </div>

        <!---->
      </div>
    </div>
  </div>
</section>
`;

exports[`Design.vue Run Query button enabled and SQL tab focused and displayed if selection(s) are made 1`] = `
<section>
  <div
    class="columns is-vcentered v-min-4-5r"
  >
    <div
      class="column"
    >
      <div
        class="is-grouped is-pulled-left"
      >
        <div
          class="has-text-weight-bold is-italic"
        >
          <span>
            Untitled Report
          </span>
        </div>

        <!---->
      </div>
    </div>

    <div
      class="column"
    >
      <div
        class="field is-grouped is-pulled-right"
      >
        <!---->

        <div
          class="control field"
          data-test-id="dropdown-save-report"
        >
          <p
            class="control"
          >
            <!---->
          </p>

          <p
            class="control"
          >
            <div
              class="dropdown is-right"
            >
              <div
                class="dropdown-trigger"
              >
                <button
                  aria-controls="dropdown-save-report"
                  aria-haspopup="true"
                  class="button"
                  disabled="disabled"
                >
                  <span
                    class=""
                  >
                    Save Report
                  </span>

                  <span
                    class="icon is-small"
                  >
                    <font-awesome-icon-stub
                      icon="caret-down"
                    />
                  </span>
                </button>
              </div>

              <div
                class="dropdown-menu"
                id="dropdown-save-report"
                role="menu"
              >
                <div
                  class="dropdown-content"
                >
                  <div
                    class="dropdown-item"
                  >
                    <div
                      class="field"
                    >
                      <!---->

                      <div
                        class="control"
                      >
                        <input
                          class="input"
                          placeholder="Name your report"
                          type="text"
                        />
                      </div>
                    </div>

                    <div
                      class="buttons is-right"
                    >
                      <button
                        class="button is-text"
                        data-dropdown-auto-close=""
                      >

                      Cancel

                      </button>

                      <button
                        class="button"
                        data-dropdown-auto-close=""
                        data-test-id="button-save-report"
                        disabled="disabled"
                      >

                      Save

                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </p>
        </div>

        <p
          class="control"
        >
          <div
            class="dropdown is-right"
          >
            <div
              class="dropdown-trigger"
            >
              <button
                aria-controls="dropdown-reports"
                aria-haspopup="true"
                class="button"
                disabled="disabled"
              >
                <span
                  class=""
                >
                  Reports
                </span>

                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="caret-down"
                  />
                </span>
              </button>
            </div>

            <div
              class="dropdown-menu"
              id="dropdown-reports"
              role="menu"
            >
              <div
                class="dropdown-content"
              />
            </div>
          </div>
        </p>

        <!---->
      </div>
    </div>
  </div>

  <div
    class="columns"
  >
    <aside
      class="column is-one-quarter"
    >
      <div
        class="box"
      >
        <div
          class="level"
        >
          <div
            class="level-left"
          >
            <h2
              class="title is-5"
            >
              Query
            </h2>
          </div>

          <div
            class="level-right"
          >
            <div
              class="level-item field is-grouped"
            >
              <div
                class="control"
              >
                <div
                  class="dropdown tooltip"
                  data-tooltip="Show generated SQL query"
                >
                  <div
                    class="dropdown-trigger"
                  >
                    <button
                      aria-controls="dropdown-sql"
                      aria-haspopup="true"
                      class="button button is-text is-small"
                    >
                      <span
                        class=""
                      >
                        SQL
                      </span>

                      <span
                        class="icon is-small"
                      >
                        <font-awesome-icon-stub
                          icon="caret-down"
                        />
                      </span>
                    </button>
                  </div>

                  <div
                    class="dropdown-menu"
                    id="dropdown-sql"
                    role="menu"
                  >
                    <div
                      class="dropdown-content"
                    >
                      <div
                        class="level"
                      >
                        <div
                          class="level-item"
                        >
                          <textarea
                            class="has-text-grey-dark is-size-7 is-family-code is-borderless"
                            readonly="readonly"
                            rows="20"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>

              <div
                class="control"
              >
                <div
                  class="field has-addons"
                >
                  <div
                    class="control"
                  >
                    <button
                      class="button is-success"
                      data-test-id="run-query-button"
                    >

                      Run

                    </button>
                  </div>

                  <div
                    class="control"
                  >
                    <button
                      class="button tooltip is-active has-text-interactive-primary"
                      data-tooltip="Toggle autorun queries off"
                    >
                      <span
                        class="icon is-small is-size-7"
                      >
                        <font-awesome-icon-stub
                          icon="sync"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>

        <progress
          class="progress is-small is-info"
        />
      </div>
    </aside>

    <div
      class="column is-three-quarters"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <h2
              class="title is-5"
            >
              <span>
                Results
              </span>

              <!---->
            </h2>
          </div>

          <div
            class="column"
          >
            <div
              class="buttons has-addons is-right"
            >
              <button
                class="button tooltip is-active has-text-interactive-secondary"
                data-tooltip="Bar chart"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Line chart"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Area chart"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Scatter chart"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>

        <div>
          <!---->

          <div>
            <div
              class="box is-radiusless is-shadowless has-text-centered"
            >
              <p>

                Run a query with at least one aggregate selected or load a
                report

              </p>
            </div>
          </div>
        </div>

        <hr />

        <div>
          <!---->

          <div
            class="result-data"
          >
            <div
              class="notification is-italic"
            >

    No results

            </div>
          </div>
        </div>

        <!---->
      </div>
    </div>
  </div>
</section>
`;

exports[`Design.vue Save report button enabled if query has ran 1`] = `
<section>
  <div
    class="columns is-vcentered v-min-4-5r"
  >
    <div
      class="column"
    >
      <div
        class="is-grouped is-pulled-left"
      >
        <div
          class="has-text-weight-bold is-italic"
        >
          <span>
            Untitled Report
          </span>
        </div>

        <!---->
      </div>
    </div>

    <div
      class="column"
    >
      <div
        class="field is-grouped is-pulled-right"
      >
        <!---->

        <div
          class="control field"
          data-test-id="dropdown-save-report"
        >
          <p
            class="control"
          >
            <!---->
          </p>

          <p
            class="control"
          >
            <dropdown-stub
              buttonclasses=""
              iconclose="caret-up"
              iconopen="caret-down"
              isrightaligned="true"
              label="Save Report"
              labelclasses=""
              menuclasses=""
              tooltip="[object Object]"
            >
              <div
                class="dropdown-content"
              >
                <div
                  class="dropdown-item"
                >
                  <div
                    class="field"
                  >
                    <!---->

                    <div
                      class="control"
                    >
                      <input
                        class="input"
                        placeholder="Name your report"
                        type="text"
                      />
                    </div>
                  </div>

                  <div
                    class="buttons is-right"
                  >
                    <button
                      class="button is-text"
                      data-dropdown-auto-close=""
                    >

                      Cancel

                    </button>

                    <button
                      class="button"
                      data-dropdown-auto-close=""
                      data-test-id="button-save-report"
                      disabled="disabled"
                    >

                      Save

                    </button>
                  </div>
                </div>
              </div>
            </dropdown-stub>
          </p>
        </div>

        <p
          class="control"
        >
          <dropdown-stub
            buttonclasses=""
            disabled="true"
            iconclose="caret-up"
            iconopen="caret-down"
            isrightaligned="true"
            label="Reports"
            labelclasses=""
            menuclasses=""
            tooltip="[object Object]"
          >
            <div
              class="dropdown-content"
            />
          </dropdown-stub>
        </p>

        <!---->
      </div>
    </div>
  </div>

  <div
    class="columns"
  >
    <aside
      class="column is-one-quarter"
    >
      <div
        class="box"
      >
        <div
          class="level"
        >
          <div
            class="level-left"
          >
            <h2
              class="title is-5"
            >
              Query
            </h2>
          </div>

          <div
            class="level-right"
          >
            <div
              class="level-item field is-grouped"
            >
              <div
                class="control"
              >
                <dropdown-stub
                  buttonclasses="button is-text is-small"
                  class="tooltip"
                  data-tooltip="Show generated SQL query"
                  iconclose="caret-up"
                  iconopen="caret-down"
                  label="SQL"
                  labelclasses=""
                  menuclasses=""
                  tooltip="[object Object]"
                >
                  <div
                    class="dropdown-content"
                  >
                    <div
                      class="level"
                    >
                      <div
                        class="level-item"
                      >
                        <textarea
                          class="has-text-grey-dark is-size-7 is-family-code is-borderless"
                          readonly="readonly"
                          rows="20"
                        />
                      </div>
                    </div>
                  </div>
                </dropdown-stub>
              </div>

              <div
                class="control"
              >
                <div
                  class="field has-addons"
                >
                  <div
                    class="control"
                  >
                    <button
                      class="button is-success"
                      data-test-id="run-query-button"
                    >

                      Run

                    </button>
                  </div>

                  <div
                    class="control"
                  >
                    <button
                      class="button tooltip is-active has-text-interactive-primary"
                      data-tooltip="Toggle autorun queries off"
                    >
                      <span
                        class="icon is-small is-size-7"
                      >
                        <font-awesome-icon
                          icon="sync"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>

        <progress
          class="progress is-small is-info"
        />
      </div>
    </aside>

    <div
      class="column is-three-quarters"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <h2
              class="title is-5"
            >
              <span>
                Results
              </span>

              <span
                class="has-text-weight-light has-text-grey-light is-size-7"
              >
                (1)
              </span>
            </h2>
          </div>

          <div
            class="column"
          >
            <div
              class="buttons has-addons is-right"
            >
              <button
                class="button tooltip is-active has-text-interactive-secondary"
                data-tooltip="Bar chart"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon
                    icon="chart-bar"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Line chart"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon
                    icon="chart-line"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Area chart"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon
                    icon="chart-area"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Scatter chart"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon
                    icon="dot-circle"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>

        <div>
          <div
            class="chart-toggles"
          >
            <chart-stub
              charttype="BarChart"
              resultaggregates="region.count"
              results="[object Object]"
            />
          </div>

          <!---->
        </div>

        <hr />

        <div>
          <!---->

          <resulttable-stub />
        </div>

        <!---->
      </div>
    </div>
  </div>
</section>
`;

exports[`Design.vue a loaded report renders report name, selections, chart, SQL, and results where the Save, Load, and Run Query buttons are enabled 1`] = `
<section>
  <div
    class="columns is-vcentered v-min-4-5r"
  >
    <div
      class="column"
    >
      <div
        class="is-grouped is-pulled-left"
      >
        <div
          class="has-text-weight-bold is-italic"
        >
          <span>
            Untitled Report
          </span>
        </div>

        <!---->
      </div>
    </div>

    <div
      class="column"
    >
      <div
        class="field is-grouped is-pulled-right"
      >
        <!---->

        <div
          class="control field"
          data-test-id="dropdown-save-report"
        >
          <p
            class="control"
          >
            <!---->
          </p>

          <p
            class="control"
          >
            <dropdown-stub
              buttonclasses=""
              iconclose="caret-up"
              iconopen="caret-down"
              isrightaligned="true"
              label="Save Report"
              labelclasses=""
              menuclasses=""
              tooltip="[object Object]"
            >
              <div
                class="dropdown-content"
              >
                <div
                  class="dropdown-item"
                >
                  <div
                    class="field"
                  >
                    <!---->

                    <div
                      class="control"
                    >
                      <input
                        class="input"
                        placeholder="Name your report"
                        type="text"
                      />
                    </div>
                  </div>

                  <div
                    class="buttons is-right"
                  >
                    <button
                      class="button is-text"
                      data-dropdown-auto-close=""
                    >

                      Cancel

                    </button>

                    <button
                      class="button"
                      data-dropdown-auto-close=""
                      data-test-id="button-save-report"
                      disabled="disabled"
                    >

                      Save

                    </button>
                  </div>
                </div>
              </div>
            </dropdown-stub>
          </p>
        </div>

        <p
          class="control"
        >
          <dropdown-stub
            buttonclasses=""
            iconclose="caret-up"
            iconopen="caret-down"
            isrightaligned="true"
            label="Reports"
            labelclasses=""
            menuclasses=""
            tooltip="[object Object]"
          >
            <div
              class="dropdown-content"
            >
              <a
                class="dropdown-item is-active"
                data-dropdown-auto-close=""
              >



              </a>
            </div>
          </dropdown-stub>
        </p>

        <!---->
      </div>
    </div>
  </div>

  <div
    class="columns"
  >
    <aside
      class="column is-one-quarter"
    >
      <div
        class="box"
      >
        <div
          class="level"
        >
          <div
            class="level-left"
          >
            <h2
              class="title is-5"
            >
              Query
            </h2>
          </div>

          <div
            class="level-right"
          >
            <div
              class="level-item field is-grouped"
            >
              <div
                class="control"
              >
                <dropdown-stub
                  buttonclasses="button is-text is-small"
                  class="tooltip"
                  data-tooltip="Show generated SQL query"
                  disabled="true"
                  iconclose="caret-up"
                  iconopen="caret-down"
                  label="SQL"
                  labelclasses=""
                  menuclasses=""
                  tooltip="[object Object]"
                >
                  <div
                    class="dropdown-content"
                  >
                    <div
                      class="level"
                    >
                      <div
                        class="level-item"
                      >
                        <textarea
                          class="has-text-grey-dark is-size-7 is-family-code is-borderless"
                          readonly="readonly"
                          rows="20"
                        />
                      </div>
                    </div>
                  </div>
                </dropdown-stub>
              </div>

              <div
                class="control"
              >
                <div
                  class="field has-addons"
                >
                  <div
                    class="control"
                  >
                    <button
                      class="button is-success"
                      data-test-id="run-query-button"
                      disabled="disabled"
                    >

                      Run

                    </button>
                  </div>

                  <div
                    class="control"
                  >
                    <button
                      class="button tooltip is-active has-text-interactive-primary"
                      data-tooltip="Toggle autorun queries off"
                      disabled="disabled"
                    >
                      <span
                        class="icon is-small is-size-7"
                      >
                        <font-awesome-icon
                          icon="sync"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>

        <progress
          class="progress is-small is-info"
        />
      </div>
    </aside>

    <div
      class="column is-three-quarters"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <h2
              class="title is-5"
            >
              <span>
                Results
              </span>

              <span
                class="has-text-weight-light has-text-grey-light is-size-7"
              >
                (1)
              </span>
            </h2>
          </div>

          <div
            class="column"
          >
            <div
              class="buttons has-addons is-right"
            >
              <button
                class="button tooltip is-active has-text-interactive-secondary"
                data-tooltip="Bar chart"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon
                    icon="chart-bar"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Line chart"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon
                    icon="chart-line"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Area chart"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon
                    icon="chart-area"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Scatter chart"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon
                    icon="dot-circle"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>

        <div>
          <div
            class="chart-toggles"
          >
            <chart-stub
              charttype="BarChart"
              resultaggregates="region.count"
              results="[object Object]"
            />
          </div>

          <!---->
        </div>

        <hr />

        <div>
          <!---->

          <resulttable-stub />
        </div>

        <!---->
      </div>
    </div>
  </div>
</section>
`;

exports[`Design.vue no selections, chart, SQL, or results where the Save, Load, and Run Query buttons are disabled by default 1`] = `
<section>
  <div
    class="columns is-vcentered v-min-4-5r"
  >
    <div
      class="column"
    >
      <div
        class="is-grouped is-pulled-left"
      >
        <div
          class="has-text-weight-bold is-italic"
        >
          <span>
            Untitled Report
          </span>
        </div>

        <!---->
      </div>
    </div>

    <div
      class="column"
    >
      <div
        class="field is-grouped is-pulled-right"
      >
        <!---->

        <div
          class="control field"
          data-test-id="dropdown-save-report"
        >
          <p
            class="control"
          >
            <!---->
          </p>

          <p
            class="control"
          >
            <div
              class="dropdown is-right"
            >
              <div
                class="dropdown-trigger"
              >
                <button
                  aria-controls="dropdown-save-report"
                  aria-haspopup="true"
                  class="button"
                  disabled="disabled"
                >
                  <span
                    class=""
                  >
                    Save Report
                  </span>

                  <span
                    class="icon is-small"
                  >
                    <font-awesome-icon-stub
                      icon="caret-down"
                    />
                  </span>
                </button>
              </div>

              <div
                class="dropdown-menu"
                id="dropdown-save-report"
                role="menu"
              >
                <div
                  class="dropdown-content"
                >
                  <div
                    class="dropdown-item"
                  >
                    <div
                      class="field"
                    >
                      <!---->

                      <div
                        class="control"
                      >
                        <input
                          class="input"
                          placeholder="Name your report"
                          type="text"
                        />
                      </div>
                    </div>

                    <div
                      class="buttons is-right"
                    >
                      <button
                        class="button is-text"
                        data-dropdown-auto-close=""
                      >

                      Cancel

                      </button>

                      <button
                        class="button"
                        data-dropdown-auto-close=""
                        data-test-id="button-save-report"
                        disabled="disabled"
                      >

                      Save

                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </p>
        </div>

        <p
          class="control"
        >
          <div
            class="dropdown is-right"
          >
            <div
              class="dropdown-trigger"
            >
              <button
                aria-controls="dropdown-reports"
                aria-haspopup="true"
                class="button"
                disabled="disabled"
              >
                <span
                  class=""
                >
                  Reports
                </span>

                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="caret-down"
                  />
                </span>
              </button>
            </div>

            <div
              class="dropdown-menu"
              id="dropdown-reports"
              role="menu"
            >
              <div
                class="dropdown-content"
              />
            </div>
          </div>
        </p>

        <!---->
      </div>
    </div>
  </div>

  <div
    class="columns"
  >
    <aside
      class="column is-one-quarter"
    >
      <div
        class="box"
      >
        <div
          class="level"
        >
          <div
            class="level-left"
          >
            <h2
              class="title is-5"
            >
              Query
            </h2>
          </div>

          <div
            class="level-right"
          >
            <div
              class="level-item field is-grouped"
            >
              <div
                class="control"
              >
                <div
                  class="dropdown tooltip"
                  data-tooltip="Show generated SQL query"
                >
                  <div
                    class="dropdown-trigger"
                  >
                    <button
                      aria-controls="dropdown-sql"
                      aria-haspopup="true"
                      class="button button is-text is-small"
                      disabled="disabled"
                    >
                      <span
                        class=""
                      >
                        SQL
                      </span>

                      <span
                        class="icon is-small"
                      >
                        <font-awesome-icon-stub
                          icon="caret-down"
                        />
                      </span>
                    </button>
                  </div>

                  <div
                    class="dropdown-menu"
                    id="dropdown-sql"
                    role="menu"
                  >
                    <div
                      class="dropdown-content"
                    >
                      <div
                        class="level"
                      >
                        <div
                          class="level-item"
                        >
                          <textarea
                            class="has-text-grey-dark is-size-7 is-family-code is-borderless"
                            readonly="readonly"
                            rows="20"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>

              <div
                class="control"
              >
                <div
                  class="field has-addons"
                >
                  <div
                    class="control"
                  >
                    <button
                      class="button is-success"
                      data-test-id="run-query-button"
                      disabled="disabled"
                    >

                      Run

                    </button>
                  </div>

                  <div
                    class="control"
                  >
                    <button
                      class="button tooltip is-active has-text-interactive-primary"
                      data-tooltip="Toggle autorun queries off"
                      disabled="disabled"
                    >
                      <span
                        class="icon is-small is-size-7"
                      >
                        <font-awesome-icon-stub
                          icon="sync"
                        />
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>

        <progress
          class="progress is-small is-info"
        />
      </div>
    </aside>

    <div
      class="column is-three-quarters"
    >
      <div
        class="box"
      >
        <div
          class="columns is-vcentered"
        >
          <div
            class="column"
          >
            <h2
              class="title is-5"
            >
              <span>
                Results
              </span>

              <!---->
            </h2>
          </div>

          <div
            class="column"
          >
            <div
              class="buttons has-addons is-right"
            >
              <button
                class="button tooltip is-active has-text-interactive-secondary"
                data-tooltip="Bar chart"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-bar"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Line chart"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-line"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Area chart"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="chart-area"
                  />
                </span>
              </button>

              <button
                class="button tooltip has-text-grey-light"
                data-tooltip="Scatter chart"
                disabled="disabled"
              >
                <span
                  class="icon is-small"
                >
                  <font-awesome-icon-stub
                    icon="dot-circle"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>

        <div>
          <!---->

          <div>
            <div
              class="box is-radiusless is-shadowless has-text-centered"
            >
              <p>

                Run a query with at least one aggregate selected or load a
                report

              </p>
            </div>
          </div>
        </div>

        <hr />

        <div>
          <!---->

          <div
            class="result-data"
          >
            <div
              class="notification is-italic"
            >

    No results

            </div>
          </div>
        </div>

        <!---->
      </div>
    </div>
  </div>
</section>
`;
